--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
   <title>Analytics Practise Site</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1KWPQKQLC3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1KWPQKQLC3');
+  
+</script>
   
 </head>
   <Body>
